src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Base_Type__c</fullName>
        <description>Oil or Water based?</description>
        <label>Base Type</label>
        <picklist>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base__c</fullName>
        <label>Base</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <controllingField>Family</controllingField>
            <picklistValues>
                <fullName>Behr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bronze__c</fullName>
        <label>Bronze</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bronze_price__c</fullName>
        <formula>National_Retail__c - ( National_Retail__c *  Bronze__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bronze price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>HD Class assignment</description>
        <label>Class</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colorant_Base_Premix_Color__c</fullName>
        <label>Colorant Base/Premix Color</label>
        <picklist>
            <picklistValues>
                <fullName>Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Cod Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar Tone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faux Glaze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linen White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navajo White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinto White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stripper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swiss Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tint Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competition</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Cost__c</fullName>
        <label>Current Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Formula_Type__c</fullName>
        <description>Vehicle</description>
        <label>Formula Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Price__c</fullName>
        <description>Price to pull in if the tier is gold</description>
        <formula>National_Retail__c-( National_Retail__c  *  Gold__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gold Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gold__c</fullName>
        <label>Gold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LVOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Retail__c</fullName>
        <description>To allow for a national retail at the product level</description>
        <label>National Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRODUCT__c</fullName>
        <label>PRODUCT</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Behr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behr Elastomeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behr Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behr Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Plus Ultra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Plus with Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO-X</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <description>Product SKU</description>
        <label>Product SKU</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behr Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deck/Toners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eggshell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Clears/Spar/Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Semi-Transparent Stain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Solid Stain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faux Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat/Matte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Enamel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloss Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masonry/Stucco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO-X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready-Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removers/Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Sealers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_UPC__c</fullName>
        <label>Product UPC</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Cost_per_GL__c</fullName>
        <label>Retail Cost per GL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <description>Retail cost</description>
        <label>Retail</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_O_Cost__c</fullName>
        <label>S/O Cost</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_O_Cost_per_GL__c</fullName>
        <label>S/O Cost per GL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheen__c</fullName>
        <label>Sheen</label>
        <picklist>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basement/Masonry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete/Masonry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deck/Fence/Siding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eggshell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastomeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat/Matte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Enamel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloss Enamel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloss Porch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primers 02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Transparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Transparent Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transparent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Silver__c</fullName>
        <label>Silver</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Silver_price__c</fullName>
        <formula>National_Retail__c  - ( National_Retail__c * Silver__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Silver price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Gallonage</description>
        <label>Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <description>HD Sub-class assignment</description>
        <label>Sub-Class</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1_Cost_per_GL__c</fullName>
        <label>Tier 1 Cost per GL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1__c</fullName>
        <description>Tier 1 Cost (125-249 gallon purchase) = 10% discount off shelf price</description>
        <label>Tier 1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_Cost_per_GL__c</fullName>
        <label>Tier 2 Cost per GL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2__c</fullName>
        <description>Tier 2 Cost (250-499 gallon purchase) = 15% discount off shelf price</description>
        <label>Tier 2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3_Cost_per_GL__c</fullName>
        <label>Tier 3 Cost per GL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3__c</fullName>
        <description>Tier 3 Cost (500+ gallon purchase) = 20% discount off shelf price</description>
        <label>Tier 3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <label>Unit Of Measurement</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <label>Use</label>
        <picklist>
            <picklistValues>
                <fullName>Interior Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior/Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Stains/Water Sealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Proofers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <description>Behr vendor number</description>
        <label>Vendor Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_SKU__c</fullName>
        <label>Vendor SKU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone1__c</fullName>
        <label>Zone 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone2__c</fullName>
        <description>Value for products in zone 2</description>
        <label>Zone 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone3__c</fullName>
        <label>Zone 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllACTIVEProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All ACTIVE Products</label>
        <language>en_US</language>
    </listViews>
</CustomObject>